rregadmin/util/path_info.h

G_BEGIN_DECLS

/**
 * @defgroup path_info_util_group Path Info Object
 *
 * @ingroup util_group
 */
typedef struct rra_path_info_ rra_path_info;
typedef guint32 rra_path_mode;
/** Create a new path_info.
 *
 * @ingroup path_info_util_group
 */
rra_path_info* rra_path_info_new(rra_path_mode in_mode);
/** Free a path_info.
 *
 * @ingroup path_info_util_group
 */
gboolean rra_path_info_free(rra_path_info *in_pi);
/** Get the delimiter that will/is used to separate parts.
 *
 * @ingroup path_info_util_group
 */
const char* rra_path_info_get_delim(const rra_path_info *in_pi);
/** Check to see if a valid delimiter is at the begining of the string.
 *
 * @ingroup path_info_util_group
 */
gboolean rra_path_info_is_delim(const rra_path_info *in_pi,
                                const char *in_str);
/** Check to see if the string contains a delimiter.
 *
 * @ingroup path_info_util_group
 */
gboolean rra_path_info_contains_delim(const rra_path_info *in_pi,
                                      const char *in_str);
/** Get the mode mask.
 *
 * @ingroup path_info_util_group
 */
rra_path_mode rra_path_info_get_mode(const rra_path_info *in_pi);
/** Set the mode mask.
 *
 * @ingroup path_info_util_group
 */
gboolean rra_path_info_set_mode(rra_path_info *in_pi, rra_path_mode in_mode);
/** Check for an option.
 *
 * @ingroup path_info_util_group
 */
gboolean rra_path_info_has_option(const rra_path_info *in_pi,
                                  rra_path_mode in_mode);
/** Set an option.
 *
 * @ingroup path_info_util_group
 */
gboolean rra_path_info_set_option(rra_path_info *in_pi,
                                  rra_path_mode in_mode);
/** Unset an option.
 *
 * @ingroup path_info_util_group
 */
gboolean rra_path_info_unset_option(rra_path_info *in_pi,
                                    rra_path_mode in_mode);