python/rregadmin/util/path_wrapper.py

"""int rra_path_allocated_count()
../../../rregadmin/util/path.h:314"""
# ../../../rregadmin/util/path_info.h 105
rra_path_info_new = _libraries['librregadmin.so.1'].rra_path_info_new
rra_path_info_new.restype = POINTER(rra_path_info)
# rra_path_info_new(in_mode)
rra_path_info_new.argtypes = [rra_path_mode]
rra_path_info_new.__doc__ = \
"""rra_path_info * rra_path_info_new(rra_path_mode in_mode)
../../../rregadmin/util/path_info.h:105"""
# ../../../rregadmin/util/path_info.h 111
rra_path_info_free = _libraries['librregadmin.so.1'].rra_path_info_free
rra_path_info_free.restype = gboolean
# rra_path_info_free(in_pi)
rra_path_info_free.argtypes = [POINTER(rra_path_info)]
rra_path_info_free.__doc__ = \
"""gboolean rra_path_info_free(rra_path_info * in_pi)
../../../rregadmin/util/path_info.h:111"""
# ../../../rregadmin/util/path_info.h 117
rra_path_info_get_delim = _libraries['librregadmin.so.1'].rra_path_info_get_delim
rra_path_info_get_delim.restype = STRING
# rra_path_info_get_delim(in_pi)
rra_path_info_get_delim.argtypes = [POINTER(rra_path_info)]
rra_path_info_get_delim.__doc__ = \
"""unknown * rra_path_info_get_delim(unknown * in_pi)
../../../rregadmin/util/path_info.h:117"""
# ../../../rregadmin/util/path_info.h 124
rra_path_info_is_delim = _libraries['librregadmin.so.1'].rra_path_info_is_delim
rra_path_info_is_delim.restype = gboolean
# rra_path_info_is_delim(in_pi, in_str)
rra_path_info_is_delim.argtypes = [POINTER(rra_path_info), STRING]
rra_path_info_is_delim.__doc__ = \
"""gboolean rra_path_info_is_delim(unknown * in_pi, unknown * in_str)
../../../rregadmin/util/path_info.h:124"""
# ../../../rregadmin/util/path_info.h 131
rra_path_info_contains_delim = _libraries['librregadmin.so.1'].rra_path_info_contains_delim
rra_path_info_contains_delim.restype = gboolean
# rra_path_info_contains_delim(in_pi, in_str)
rra_path_info_contains_delim.argtypes = [POINTER(rra_path_info), STRING]
rra_path_info_contains_delim.__doc__ = \
"""gboolean rra_path_info_contains_delim(unknown * in_pi, unknown * in_str)
../../../rregadmin/util/path_info.h:131"""
# ../../../rregadmin/util/path_info.h 137
rra_path_info_get_mode = _libraries['librregadmin.so.1'].rra_path_info_get_mode
rra_path_info_get_mode.restype = rra_path_mode
# rra_path_info_get_mode(in_pi)
rra_path_info_get_mode.argtypes = [POINTER(rra_path_info)]
rra_path_info_get_mode.__doc__ = \
"""rra_path_mode rra_path_info_get_mode(unknown * in_pi)
../../../rregadmin/util/path_info.h:137"""
# ../../../rregadmin/util/path_info.h 143
rra_path_info_set_mode = _libraries['librregadmin.so.1'].rra_path_info_set_mode
rra_path_info_set_mode.restype = gboolean
# rra_path_info_set_mode(in_pi, in_mode)
rra_path_info_set_mode.argtypes = [POINTER(rra_path_info), rra_path_mode]
rra_path_info_set_mode.__doc__ = \
"""gboolean rra_path_info_set_mode(rra_path_info * in_pi, rra_path_mode in_mode)
../../../rregadmin/util/path_info.h:143"""
# ../../../rregadmin/util/path_info.h 150
rra_path_info_has_option = _libraries['librregadmin.so.1'].rra_path_info_has_option
rra_path_info_has_option.restype = gboolean
# rra_path_info_has_option(in_pi, in_mode)
rra_path_info_has_option.argtypes = [POINTER(rra_path_info), rra_path_mode]
rra_path_info_has_option.__doc__ = \
"""gboolean rra_path_info_has_option(unknown * in_pi, rra_path_mode in_mode)
../../../rregadmin/util/path_info.h:150"""
# ../../../rregadmin/util/path_info.h 157
rra_path_info_set_option = _libraries['librregadmin.so.1'].rra_path_info_set_option
rra_path_info_set_option.restype = gboolean
# rra_path_info_set_option(in_pi, in_mode)
rra_path_info_set_option.argtypes = [POINTER(rra_path_info), rra_path_mode]
rra_path_info_set_option.__doc__ = \
"""gboolean rra_path_info_set_option(rra_path_info * in_pi, rra_path_mode in_mode)
../../../rregadmin/util/path_info.h:157"""
# ../../../rregadmin/util/path_info.h 164
rra_path_info_unset_option = _libraries['librregadmin.so.1'].rra_path_info_unset_option
rra_path_info_unset_option.restype = gboolean
# rra_path_info_unset_option(in_pi, in_mode)
rra_path_info_unset_option.argtypes = [POINTER(rra_path_info), rra_path_mode]
rra_path_info_unset_option.__doc__ = \
"""gboolean rra_path_info_unset_option(rra_path_info * in_pi, rra_path_mode in_mode)
../../../rregadmin/util/path_info.h:164"""
__all__ = ['rra_path_get_part', 'rra_path_info_set_mode',
           'rra_path_info_get_mode', 'rra_path_info_new',
           'rra_path_append_part', 'rra_path_is_relative', 'rra_path',
           'rra_path_new_unix', 'rra_path_trim_front',
           'rra_path_is_absolute', 'rra_path_get_mode',
           'rra_path_equal', 'rra_path_', 'rra_path_prepend_part',
           'rra_path_info_is_delim', 'rra_path_copy',
           'rra_path_basename', 'rra_path_compare',
           'rra_path_has_mode', 'rra_path_parse', 'rra_path_add',
           'rra_path_number_of_parts', 'rra_path_free',
           'rra_path_allocated_count', 'rra_path_info_set_option',
           'rra_path_set', 'rra_path_info_free', 'rra_path_normalize',
           'rra_path_as_str', 'rra_path_info_get_delim',
           'rra_path_trim_back', 'rra_path_copy_full',
           'rra_path_new_full', 'rra_path_as_ustr', 'rra_path_less',
           'rra_path_new_win', 'rra_path_info_has_option',
           'rra_path_info_contains_delim',
           'rra_path_info_unset_option', 'rra_path_make_subpath',
           'rra_path_clear', 'rra_path_get_delimiter',
           'rra_path_is_subpath', 'rra_path_is_valid',
           'rra_path_dirname']
